# power_buddy

./: .gitignore  .gitmodules  .travis.yml  README.md  com.github.max246.powerbuddy  com.github.max246.powerbuddy.json  meson.build
build-aux/meson/: postinstall.py
data/: com.github.max246.powerbuddy.appdata.xml.in  com.github.max246.powerbuddy.desktop.in  com.github.max246.powerbuddy.gschema.xml  css.gresource.xml  meson.build
po/: POTFILES  meson.build
src/: main.vala  meson.build  powerbuddy.gresource.xml  settings.vala  window.ui  window.vala
src/Models/: ACModel.vala  BatteryModel.vala  DeviceModel.vala  OtherBatteryModel.vala  UPowerModel.vala
src/Pages/: ACPage.vala  BatteryPage.vala  DevicePage.vala  HistoryPage.vala  StatsPage.vala
src/Threads/: UPowerThread.vala
src/Views/: BatteryView.vala
src/Widgets/: BatteryPurchase.vala  HistoryGraph.vala  TopBar.vala
